Corrected tab bar not showing up on first opening application.

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,8 @@
 page-home {
-
+	ion-tabs {
+		.tabbar {
+			opacity: 1;
+		}
+	}
 }
+
